--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       max-width: 1000px;
       margin: auto;
     }
-    .services, .about, .contact {
+    .services, .about, .contact, .testimonials {
       margin-bottom: 40px;
     }
     h2 {
@@ -96,6 +96,14 @@
     button:hover {
       background-color: #16306e;
     }
+    .testimonial {
+      background-color: #ffffff;
+      border-left: 5px solid #4CAF50;
+      padding: 15px 20px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+    }
     footer {
       background-color: #1F3A93;
       color: white;
@@ -119,7 +127,9 @@
     <p>ProFin Solidaire ist eine Mikrofinanzinstitution, die sich für finanzielle Inklusion und sozialen Fortschritt einsetzt. Wir unterstützen kleine Unternehmer und benachteiligte Gruppen durch zugängliche Finanzlösungen.</p>
   </section>
 
-  <section class="services">
+  <div style="text-align:center; margin-bottom: 20px;">
+      <a class="whatsapp-button" style="font-size: 1.2rem; padding: 15px 30px;" href="https://wa.me/33758747212?text=Ich%20m%C3%B6chte%20jetzt%20einen%20Express-Kredit%20beantragen" target="_blank">📱 Express-Kredit jetzt erhalten</a>
+    </div>
     <h2>Unsere Dienstleistungen</h2>
     <ul>
       <li>Mikrokredite für Kleinstunternehmen</li>
@@ -127,6 +137,25 @@
       <li>Gemeinschaftliche Kreditmodelle</li>
       <li>Soziale Unterstützung und Empowerment</li>
     </ul>
+  </section>
+
+  <section class="testimonials">
+    <h2>Kundenerfahrungen</h2>
+    <div class="testimonial">
+      <p>⭐⭐⭐⭐⭐<br>
+      </p>
+      <strong>– Amina K.</strong>
+    </div>
+    <div class="testimonial">
+      <p>⭐⭐⭐⭐⭐<br>
+      </p>
+      <strong>– Jonas M.</strong>
+    </div>
+    <div class="testimonial">
+      <p>⭐⭐⭐⭐⭐<br>
+      </p>
+      <strong>– Sarah B.</strong>
+    </div>
   </section>
 
   <section class="contact">
